# ContestBuddy

./: LICENSE  README.md  index.html  pyproject.toml  run.bat
gg/: pyvenv.cfg
gg/Scripts/: activate  activate.bat  prichunkpng  pricolpng  priditherpng  priforgepng  prigreypng  pripalpng  pripamtopng  priplan9topng  pripnglsch  pripngtopam  prirowpng  priweavepng
src/: main.py  requirements.txt
src/cache/: __init__.py  atcoder.jp_contests.json  codechef.com_contests.json  codeforces.com_contests.json  hackerrank.com_contests.json  leetcode.com_contests.json  local_contest_cache.py  topcoder.com_contests.json
src/components/: __init__.py  contest_card.py  logout_component.py
src/data/: session.json
src/database/: __init__.py  mongodb_client.py  session_manager.py
src/screens/: contest_list.py  cp_guide.py  home.py  login.py  profile.py  profile_analyzer.py  reminders.py  settings.py  signup.py
src/services/: api_client.py  background_fetcher.py  cpp_compiler_service.py  profile_service.py  reminder_service.py
src/services/platform_analyzers/: atcoder_analyzer.py  base_analyzer.py  codechef_analyzer.py  codeforces_analyzer.py  leetcode_analyzer.py
